--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,15 @@ h1 {
 
 .book-cards {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .book {
   border: 1px solid lightgrey;
   width: 400px;
   padding: 10px;
+  margin: 5px;
 }
